<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingTop="?android:attr/actionBarSize"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:paddingTop="8dp"
        android:animateLayoutChanges="true"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:paddingLeft="10dp"
                android:gravity="left"
                android:text="Type of ride"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/rideTypeSpinner"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:paddingRight="10dp"
                android:layout_weight="0.7"
                android:ems="10"
                android:hint="@string/ride_type" />
        </LinearLayout>

        <de.tum.mitfahr.widget.FloatLabelLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

            <AutoCompleteTextView
                android:id="@+id/departureText"
                android:inputType="textNoSuggestions"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:nextFocusDown="@+id/destinationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/from" />
        </de.tum.mitfahr.widget.FloatLabelLayout>

        <de.tum.mitfahr.widget.FloatLabelLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

            <AutoCompleteTextView
                android:id="@id/destinationText"
                android:inputType="textNoSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:nextFocusDown="@+id/meetingText"
                android:hint="@string/to" />
        </de.tum.mitfahr.widget.FloatLabelLayout>

        <de.tum.mitfahr.widget.FloatLabelLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

            <EditText
                android:id="@id/meetingText"
                android:inputType="textNoSuggestions"
                android:layout_width="match_parent"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:ellipsize="end"
                android:scrollHorizontally="true"
                android:nextFocusDown="@+id/seatsText"
                android:layout_height="wrap_content"
                android:hint="@string/meeting_point" />
        </de.tum.mitfahr.widget.FloatLabelLayout>

        <de.tum.mitfahr.widget.FloatLabelLayout
            android:id="@+id/seatsTextContainer"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

            <EditText
                android:id="@id/seatsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/free_seats" />
        </de.tum.mitfahr.widget.FloatLabelLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pickTimeButton"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_access_time_black_18dp"
                android:text="@string/pick_time" />

            <View
                android:layout_width="2px"
                android:layout_marginTop="10dp"
                android:background="@color/gray_faded"
                android:layout_marginBottom="10dp"
                android:layout_height="fill_parent" />


            <Button
                android:id="@+id/pickDateButton"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_today_black_18dp"
                android:text="@string/pick_date" />
        </LinearLayout>


        <com.dd.CircularProgressButton
            android:id="@+id/offerRideButton"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="14sp"
            app:cpb_textComplete="Ride Created"
            app:cpb_textError="Error"
            app:cpb_cornerRadius="2dp"
            app:cpb_textIdle="Create"
            app:cpb_selectorIdle="@drawable/button_blue3_idle_state_selector" />
    </LinearLayout>
</ScrollView>
