<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inAnimation="@android:anim/fade_in"
        android:outAnimation="@android:anim/fade_out">

        <com.flaviofaria.kenburnsview.KenBurnsView
            android:id="@+id/img1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/hero_image1" />

        <com.flaviofaria.kenburnsview.KenBurnsView
            android:id="@+id/img2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/hero_image2" />

        <com.flaviofaria.kenburnsview.KenBurnsView
            android:id="@+id/img3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/hero_image3" />

        <com.flaviofaria.kenburnsview.KenBurnsView
            android:id="@+id/img4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/hero_image4" />

    </ViewFlipper>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_margin="24dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp"
            android:text="New Account"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/emailEditText"
            style="@style/BorderedTextBox"
            android:drawableLeft="@drawable/ic_email_white_24dp"
            android:drawablePadding="16dp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

        <EditText
            style="@style/BorderedTextBox"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_account_circle_white_18dp"
            android:drawablePadding="16dp"
            android:id="@+id/firstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name" />

        <EditText
            style="@style/BorderedTextBox"
            android:layout_marginTop="16dp"

            android:drawableLeft="@drawable/placeholder"
            android:drawablePadding="16dp"
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name" />

        <Spinner
            style="@style/BorderedSpinner"
            android:layout_marginTop="16dp"
            android:id="@+id/departmentSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/faculty"
            android:spinnerMode="dropdown" />

        <com.dd.CircularProgressButton
            android:id="@+id/registerButton"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="14sp"
            app:cpb_cornerRadius="2dp"
            app:cpb_textComplete="Registered"
            app:cpb_textError="Error Registering"
            app:cpb_textIdle="Register"
            app:cpb_selectorIdle="@drawable/button_blue3_idle_state_selector" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Back to login"
            android:background="@drawable/transparent"
            android:textSize="16sp" />
    </LinearLayout>
</FrameLayout>